cluster/apps/networking/traefik/dashboard/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: networking
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.${SECRET_DOMAIN}`)
    kind: Rule
    priority: 10
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
#    - name: rfc1918
    - name: traefik-sso
  tls:
    secretName: "${SECRET_DOMAIN}-tls"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: networking
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`auth.${SECRET_DOMAIN}`)
    kind: Rule
    services:
    - name: traefik-forward-auth
      namespace: traefik
      port: 4181
    middlewares:
    - name: traefik-sso
  tls:
    secretName: ${SECRET_DOMAIN}-tls
